syntax = "proto3";

package users;

option go_package="./pb";

service Users {
    rpc GetMe(AuthorizationRequest) returns (User);
    rpc Create(CreateRequest) returns (User);
    rpc SignIn(SignInRequest) returns (Session);
    rpc SignOut(AuthorizationRequest) returns (Empty);
    rpc Get(GetRequest) returns (User);
}

message CreateRequest {
    string email = 1;
    string password = 2;
}

message AuthorizationRequest {
    string token = 1;
}
message User {
    int64 id = 1;
    string email = 2;
    string username = 3;
    string display_name = 4;
    string bio = 5;
}
message GetRequest {
    int64 id = 1;
}
message SignInRequest {
    string email = 1;
    string password = 2;
    string platform = 3;
}
message Session {
    string token = 1;
}
message Empty {}